Sprint 2 - Dentinho Feliz

--- a/DentinhoFeliz.Api/appsettings.json
+++ b/DentinhoFeliz.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=DentinhoFelizDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.;Database=DentinhoFelizDB;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Logging": {
         "LogLevel": {
